--- a/examples/sample-1.html
+++ b/examples/sample-1.html
@@ -3,7 +3,7 @@
         <script src="../bower_components/underscore/underscore-min.js"></script>
         <script src="../bower_components/jquery/dist/jquery.min.js" ></script>
         <script src="../bower_components/backbone/backbone.js"></script>
-        <script src="../src/modelEvents.js"></script>
+        <script src="../src/dataEvents.js"></script>
     </head>
     <body>
 
