documentation! 	- Updating README.md file with actual useful information 	- created a 3rd example (a bit more convoluted than the original 2)

--- a/examples/sample-2.html
+++ b/examples/sample-2.html
@@ -6,7 +6,7 @@
     <script src="../src/dataEvents.js"></script>
 </head>
 <body>
-
+<h2>Open your browser console and take a look at the output</h2>
 <div id="sample-1">
 
 </div>
